spacing for contact and index on 768px seems correct but portfolio is slightly off on bottom

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,8 +218,9 @@ input[type=submit] {
 }
 
 @media only screen and (max-width: 768px) {
-  body {
-    
+  .main-section {
+    margin-bottom: 50%;
+
   }
 
   nav {
